Tasks on 20 Jan 2026 - Enhance ‘Set Activity Frequency’ popup - RAD-7044: [android][qa][sleepright]Heading text size is incorrect for SleepRight section categories - RAD-7014: Notif popup for users who haven't enabled in onboarding - RAD-7049: [android][qa][checklist]Selection dots are missing and default option is not selected on Sleep Quality checklist screen - RAD-7048: [android][qa][checklist]Selection dots are missing and default option is not selected on Anxiety checklist screen

--- a/app/src/main/res/layout/activity_new_sleep_sound.xml
+++ b/app/src/main/res/layout/activity_new_sleep_sound.xml
@@ -8,10 +8,10 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
         android:gravity="center_vertical"
-        android:paddingVertical="16dp"
-        android:paddingHorizontal="8dp">
+        android:orientation="horizontal"
+        android:paddingHorizontal="8dp"
+        android:paddingVertical="16dp">
 
         <ImageView
             android:id="@+id/icon_back"
@@ -22,27 +22,27 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Sleep"
-            android:textSize="18sp"
+            android:layout_marginStart="4dp"
             android:fontFamily="@font/merriweather_bold"
+            android:text="Sleep"
             android:textColor="@color/txt_color_mind"
-            android:layout_marginStart="4dp" />
+            android:textSize="18sp" />
     </LinearLayout>
 
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="48dp"
+        android:layout_marginHorizontal="16dp"
         android:background="@drawable/bg_search_box"
-        android:elevation="2dp"
-        android:layout_marginHorizontal="16dp">
+        android:elevation="2dp">
 
         <ImageView
             android:id="@+id/ivSearchIcon"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical|start"
-            android:src="@drawable/search_new"
-            android:layout_marginStart="12dp" />
+            android:layout_marginStart="12dp"
+            android:src="@drawable/search_new" />
 
         <EditText
             android:id="@+id/etSearch"
@@ -50,44 +50,44 @@
             android:layout_height="match_parent"
             android:layout_gravity="center_vertical"
             android:background="@null"
+            android:fontFamily="@font/dmsans_regular"
             android:hint="Search"
+            android:imeOptions="actionSearch"
+            android:inputType="text"
+            android:paddingVertical="8dp"
+            android:paddingStart="36dp"
+            android:singleLine="true"
             android:textColor="@color/txt_color_header"
             android:textColorHint="#747474"
-            android:textSize="16sp"
-            android:paddingStart="36dp"
-            android:paddingVertical="8dp"
-            android:inputType="text"
-            android:fontFamily="@font/dmsans_regular"
-            android:imeOptions="actionSearch"
-            android:singleLine="true" />
+            android:textSize="16sp" />
     </FrameLayout>
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerViewSearch"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
         android:orientation="horizontal"
         android:overScrollMode="never"
         android:paddingHorizontal="16dp"
-        android:layout_marginTop="8dp"
-        android:visibility="gone"/>
+        android:visibility="gone" />
 
 
     <LinearLayout
         android:id="@+id/mainSleepSoundLayout"
         android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:orientation="vertical"
-        android:paddingHorizontal="16dp"
-        android:layout_height="match_parent">
+        android:paddingHorizontal="16dp">
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recyclerCategory"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:overScrollMode="never"
             android:layout_marginTop="8dp"
-            android:layout_marginBottom="16dp" />
+            android:layout_marginBottom="16dp"
+            android:orientation="horizontal"
+            android:overScrollMode="never" />
 
         <androidx.core.widget.NestedScrollView
             android:layout_width="match_parent"
@@ -105,178 +105,178 @@
                     android:orientation="vertical">
 
                     <LinearLayout
-                        android:layout_width="match_parent"
-                        android:orientation="vertical"
                         android:id="@+id/ll_music_home"
-                        android:layout_height="wrap_content">
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="vertical">
 
                         <LinearLayout
-                            android:layout_width="match_parent"
-                            android:orientation="vertical"
                             android:id="@+id/layoutPlaylist"
-                            android:visibility="visible"
-                            android:layout_height="wrap_content">
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:orientation="vertical"
+                            android:visibility="visible">
 
                             <LinearLayout
                                 android:layout_width="match_parent"
-                                android:orientation="vertical"
-                                android:layout_height="wrap_content">
+                                android:layout_height="wrap_content"
+                                android:orientation="vertical">
 
                                 <TextView
                                     android:id="@+id/tvYourPlayList"
                                     android:layout_width="wrap_content"
-                                    android:text="Your Playlist"
+                                    android:layout_height="wrap_content"
                                     android:fontFamily="@font/dmsans_bold"
-                                    android:textSize="@dimen/textsize_large24sp"
-                                    android:visibility="gone"
-                                    android:layout_height="wrap_content" />
+                                    android:text="Your Playlist"
+                                    android:textSize="18sp"
+                                    android:visibility="gone" />
                             </LinearLayout>
 
                             <androidx.recyclerview.widget.RecyclerView
                                 android:id="@+id/recycler_view_play_list"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
-                                android:orientation="horizontal"
-                                android:overScrollMode="never"
                                 android:layout_marginTop="8dp"
-                                android:layout_marginBottom="16dp" />
+                                android:layout_marginBottom="16dp"
+                                android:orientation="horizontal"
+                                android:overScrollMode="never" />
                         </LinearLayout>
 
                         <LinearLayout
-                            android:layout_width="match_parent"
-                            android:orientation="vertical"
                             android:id="@+id/layoutNewRelease"
-                            android:visibility="gone"
-                            android:layout_height="wrap_content">
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:orientation="vertical"
+                            android:visibility="gone">
 
                             <LinearLayout
                                 android:layout_width="match_parent"
-                                android:orientation="vertical"
-                                android:layout_height="wrap_content">
+                                android:layout_height="wrap_content"
+                                android:orientation="vertical">
 
                                 <TextView
                                     android:id="@+id/tvNewRelease"
                                     android:layout_width="wrap_content"
-                                    android:text="New Release"
+                                    android:layout_height="wrap_content"
                                     android:fontFamily="@font/dmsans_bold"
-                                    android:textSize="@dimen/textsize_large24sp"
-                                    android:layout_height="wrap_content" />
+                                    android:text="New Release"
+                                    android:textSize="18sp" />
                             </LinearLayout>
 
                             <androidx.recyclerview.widget.RecyclerView
                                 android:id="@+id/recycler_view_new_release"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
-                                android:orientation="horizontal"
-                                android:overScrollMode="never"
                                 android:layout_marginTop="8dp"
-                                android:layout_marginBottom="16dp" />
+                                android:layout_marginBottom="16dp"
+                                android:orientation="horizontal"
+                                android:overScrollMode="never" />
                         </LinearLayout>
 
                         <LinearLayout
                             android:id="@+id/linearLayoutContainer"
-                            android:orientation="vertical"
                             android:layout_width="match_parent"
-                            android:layout_height="wrap_content" />
+                            android:layout_height="wrap_content"
+                            android:orientation="vertical" />
 
                         <LinearLayout
-                            android:layout_width="match_parent"
-                            android:orientation="vertical"
                             android:id="@+id/layouthorizontalMusicList"
-                            android:visibility="visible"
-                            android:layout_height="wrap_content">
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:orientation="vertical"
+                            android:visibility="visible">
 
                             <LinearLayout
                                 android:layout_width="match_parent"
-                                android:orientation="vertical"
-                                android:layout_height="wrap_content">
+                                android:layout_height="wrap_content"
+                                android:orientation="vertical">
 
                                 <TextView
                                     android:id="@+id/categorytTitleHorizontal"
                                     android:layout_width="wrap_content"
-                                    android:text=""
+                                    android:layout_height="wrap_content"
                                     android:fontFamily="@font/dmsans_bold"
-                                    android:textSize="@dimen/textsize_large24sp"
-                                    android:layout_height="wrap_content" />
+                                    android:text=""
+                                    android:textSize="18sp" />
                             </LinearLayout>
 
                             <androidx.recyclerview.widget.RecyclerView
                                 android:id="@+id/recycler_view_horizontal_list"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
-                                android:orientation="horizontal"
-                                android:overScrollMode="never"
                                 android:layout_marginTop="8dp"
-                                android:layout_marginBottom="16dp" />
+                                android:layout_marginBottom="16dp"
+                                android:orientation="horizontal"
+                                android:overScrollMode="never" />
                         </LinearLayout>
                     </LinearLayout>
 
                     <LinearLayout
-                        android:layout_width="match_parent"
-                        android:orientation="vertical"
                         android:id="@+id/layoutVerticalCategoryList"
-                        android:visibility="gone"
-                        android:layout_height="wrap_content">
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="vertical"
+                        android:visibility="gone">
 
                         <LinearLayout
                             android:layout_width="match_parent"
-                            android:orientation="vertical"
-                            android:layout_height="wrap_content">
+                            android:layout_height="wrap_content"
+                            android:orientation="vertical">
 
                             <TextView
                                 android:id="@+id/categorytTitle"
                                 android:layout_width="wrap_content"
-                                android:text="Sleep Stories"
+                                android:layout_height="wrap_content"
                                 android:fontFamily="@font/dmsans_bold"
-                                android:textSize="@dimen/textsize_large24sp"
-                                android:layout_height="wrap_content" />
+                                android:text="Sleep Stories"
+                                android:textSize="18sp" />
 
                             <TextView
                                 android:id="@+id/categorytTitleDesciption"
                                 android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
                                 android:layout_alignParentEnd="true"
                                 android:fontFamily="@font/dmsans_regular"
-                                android:textSize="@dimen/textsize_medium"
-                                android:layout_height="wrap_content" />
+                                android:textSize="@dimen/textsize_medium" />
                         </LinearLayout>
 
                         <androidx.recyclerview.widget.RecyclerView
                             android:id="@+id/recycler_view_vertical_list"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:orientation="horizontal"
-                            android:overScrollMode="never"
-                            android:nestedScrollingEnabled="false"
                             android:layout_marginTop="8dp"
-                            android:layout_marginBottom="16dp" />
+                            android:layout_marginBottom="16dp"
+                            android:nestedScrollingEnabled="false"
+                            android:orientation="horizontal"
+                            android:overScrollMode="never" />
                     </LinearLayout>
                 </LinearLayout>
 
                 <include layout="@layout/loader_layout" />
 
                 <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_centerHorizontal="true"
-                    android:orientation="vertical"
-                    android:gravity="center"
                     android:id="@+id/ll_no_data"
-                    android:visibility="gone"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerHorizontal="true"
                     android:layout_marginTop="250dp"
-                    android:layout_height="wrap_content">
+                    android:gravity="center"
+                    android:orientation="vertical"
+                    android:visibility="gone">
 
                     <TextView
                         android:layout_width="wrap_content"
-                        android:text="Build your perfect sleep playlist."
+                        android:layout_height="wrap_content"
                         android:fontFamily="@font/dmsans_bold"
-                        android:textSize="@dimen/textsize_large18sp"
-                        android:layout_height="wrap_content" />
+                        android:text="Build your perfect sleep playlist."
+                        android:textSize="@dimen/textsize_large18sp" />
 
                     <TextView
                         android:layout_width="wrap_content"
-                        android:text="Add any track by tapping the + at the top right."
+                        android:layout_height="wrap_content"
                         android:fontFamily="@font/dmsans_regular"
-                        android:textSize="@dimen/textsize_medium"
-                        android:layout_height="wrap_content" />
+                        android:text="Add any track by tapping the + at the top right."
+                        android:textSize="@dimen/textsize_medium" />
                 </LinearLayout>
             </RelativeLayout>
         </androidx.core.widget.NestedScrollView>
