--- a/app/src/main/res/layout/fragment_sleep_right_landing.xml
+++ b/app/src/main/res/layout/fragment_sleep_right_landing.xml
@@ -748,7 +748,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:textColor="@color/sleep_text_color"
-                        android:text="You might’ve slept great—or not. Log your\nnight or sync your device to reveal your\nsleep performance."
+                        android:text="You might’ve slept great or not. Log your\nnight or sync your device to reveal your\nsleep performance."
                         android:id="@+id/tv_sleep_mystery_subtitle"
                         android:textSize="16sp"
                         android:layout_marginEnd="15dp"
@@ -2122,7 +2122,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:textColor="@color/sleep_text_color"
-                        android:text="You might’ve slept great—or not. Log your\nnight or sync your device to reveal your\nsleep performance."
+                        android:text="You might’ve slept great or not. Log your\nnight or sync your device to reveal your\nsleep performance."
                         android:id="@+id/tv_sleep_data_subtitle_"
                         android:textSize="16sp"
                         android:layout_marginEnd="15dp"
