Tasks on 21 Jan 2026 - RAD-5843: Free Trial Expired capsule overlaps user name when name length is long on Home and My Health screens - on Edit Profile email field is mandatory even if user login with phone number - issue resolved - RAD-6805: Android[QA]> Challenge Screen > Ranking card edges are not rounded as per design - RAD-6747: [android][production][profile]Resend OTP button appears disabled but is still clickable on Email ID OTP screen - User GET and PUT APIs update for bodyFat parameter

--- a/app/src/main/res/layout/activity_home_new.xml
+++ b/app/src/main/res/layout/activity_home_new.xml
@@ -80,9 +80,10 @@
                         android:ellipsize="end"
                         android:fontFamily="@font/dmsans_bold"
                         android:gravity="center"
-                        android:maxLength="15"
+                        android:maxLength="20"
                         android:singleLine="true"
                         android:text=""
+                        android:layout_marginEnd="2dp"
                         android:textColor="@color/txt_color_header"
                         android:textSize="@dimen/textsize_medium" />
                 </LinearLayout>
