--- a/app/src/main/res/layout/dialog_otp_verification.xml
+++ b/app/src/main/res/layout/dialog_otp_verification.xml
@@ -153,6 +153,7 @@
         android:layout_marginEnd="40dp"
         android:text="Resend OTP"
         android:textSize="16sp"
+        android:enabled="false"
         android:fontFamily="@font/dmsans_bold"
         android:textColor="@color/rightlife"
         android:backgroundTint="@color/white" />
