--- a/app/src/main/res/layout/layout_rank_challenge.xml
+++ b/app/src/main/res/layout/layout_rank_challenge.xml
@@ -6,6 +6,7 @@
     android:layout_height="240dp"
     android:background="@drawable/bg_rounded_corners"
     android:layout_marginTop="12dp"
+    android:padding="8dp"
     android:visibility="gone">
 
     <ImageView
