--- a/app/src/main/res/layout/fragment_ideal_actual_sleep_time.xml
+++ b/app/src/main/res/layout/fragment_ideal_actual_sleep_time.xml
@@ -192,7 +192,7 @@
                         android:layout_width="12dp"
                         android:layout_height="12dp"
                         android:src="@drawable/green_up_icon"
-                        android:visibility="gone"
+                        android:visibility="visible"
                         android:layout_marginStart="21dp"
                         app:layout_constraintTop_toBottomOf="@+id/tv_average_sleep_time"
                         app:layout_constraintStart_toStartOf="parent"/>
@@ -201,7 +201,7 @@
                         android:id="@+id/percentage_text"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:visibility="gone"
+                        android:visibility="visible"
                         android:text="50% past week"
                         android:textSize="10sp"
                         android:layout_marginStart="4dp"
@@ -239,7 +239,7 @@
                         android:id="@+id/percentage_icon_average"
                         android:layout_width="12dp"
                         android:layout_height="12dp"
-                        android:visibility="gone"
+                        android:visibility="visible"
                         android:src="@drawable/green_up_icon"
                         app:layout_constraintTop_toBottomOf="@+id/tv_average_needed_time"
                         app:layout_constraintStart_toStartOf="@+id/average_needed_text"/>
@@ -249,7 +249,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="50% past week"
-                        android:visibility="gone"
+                        android:visibility="visible"
                         android:textSize="10sp"
                         android:layout_marginStart="4dp"
                         android:textColor="@color/green_text"
