--- a/app/src/main/res/layout/fragment_resting_heart_rate.xml
+++ b/app/src/main/res/layout/fragment_resting_heart_rate.xml
@@ -219,7 +219,7 @@
                         android:layout_width="12dp"
                         android:layout_height="12dp"
                         android:src="@drawable/ic_up"
-                        android:visibility="gone"
+                        android:visibility="visible"
                         android:layout_marginStart="21dp"
                         app:layout_constraintTop_toBottomOf="@+id/average_number"
                         app:layout_constraintStart_toStartOf="parent" />
@@ -229,7 +229,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="50% past week"
-                        android:visibility="gone"
+                        android:visibility="visible"
                         android:textSize="10sp"
                         android:layout_marginStart="4dp"
                         android:textColor="@color/green_text"
