--- a/app/src/main/res/layout/fragment_step.xml
+++ b/app/src/main/res/layout/fragment_step.xml
@@ -236,7 +236,7 @@
                         android:layout_width="12dp"
                         android:layout_height="12dp"
                         android:src="@drawable/ic_up"
-                        android:visibility="gone"
+                        android:visibility="visible"
                         android:layout_marginStart="21dp"
                         app:layout_constraintTop_toBottomOf="@+id/averageBurnCalorie"
                         app:layout_constraintStart_toStartOf="parent"/>
@@ -247,7 +247,7 @@
                         android:layout_height="wrap_content"
                         android:text="0% past week"
                         android:textSize="10sp"
-                        android:visibility="gone"
+                        android:visibility="visible"
                         android:fontFamily="@font/dmsans_regular"
                         android:layout_marginStart="4dp"
                         android:textColor="@color/green_text"
