--- a/app/src/main/res/layout/bottomsheet_height_picker.xml
+++ b/app/src/main/res/layout/bottomsheet_height_picker.xml
@@ -117,7 +117,7 @@
 
                 <com.jetsynthesys.rightlife.ui.customviews.HeightPickerView
                     android:id="@+id/pickerView"
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"/>
 
             </ScrollView>
