Following issues resolved on 22 Jan 2026 - RAD-7003: Android[QA] > Your Daily Score > Face Scan due card flashes briefly on arrow click - RAD-7063: Android[QA(375)] > ThinkRight > Breathing Type Listing Page > Heading and Content Copy Left Alignment Issue - RAD-7064: Android[QA(375)] > ThinkRight > Breathing > Info Popup Moves Up Instead of Staying Fixed at Bottom - RAD-7043: [android][qa]sleepright]Sleep Sound categories are repeated and “View All” CTA missing in listing view - RAD-7045: [android][qa]sleepright]“New Release” text and sound are missing in All tab of Sleep Sound section - RAD-7042: [android][qa]sleepright]All tab and Your Playlist tab positions are interchanged on Sleep Sound section

--- a/app/src/main/res/layout/activity_breathwork.xml
+++ b/app/src/main/res/layout/activity_breathwork.xml
@@ -50,7 +50,8 @@
             android:textSize="@dimen/textsize_large24sp"
             android:fontFamily="@font/merriweather_bold"
             android:textColor="@color/txt_color_mind"
-            android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"/>
 
         <TextView
             android:layout_width="wrap_content"
@@ -58,7 +59,8 @@
             android:textSize="@dimen/textsize_large"
             android:fontFamily="@font/dmsans_regular"
             android:textColor="@color/txt_color_journal_gray"
-            android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"/>
 
 
     <androidx.recyclerview.widget.RecyclerView
