--- a/app/src/main/res/layout/item_horrizontal_song_card_full.xml
+++ b/app/src/main/res/layout/item_horrizontal_song_card_full.xml
@@ -6,13 +6,13 @@
     android:orientation="vertical">
 
     <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="120dp">
+        android:layout_width="160dp"
+        android:layout_height="160dp">
 
         <ImageView
             android:id="@+id/itemImage"
-            android:layout_width="match_parent"
-            android:layout_height="120dp"
+            android:layout_width="160dp"
+            android:layout_height="160dp"
             android:layout_centerInParent="true"
             android:layout_weight="1"
             android:scaleType="centerCrop"
