--- a/app/src/main/res/layout/item_section_layout_musiclisthome.xml
+++ b/app/src/main/res/layout/item_section_layout_musiclisthome.xml
@@ -4,9 +4,8 @@
     android:orientation="vertical"
     android:layout_height="wrap_content">
 
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:orientation="vertical"
         android:layout_height="wrap_content">
 
         <TextView
@@ -15,8 +14,20 @@
             android:layout_height="wrap_content"
             android:text="Sleep Music"
             android:fontFamily="@font/dmsans_bold"
-            android:textSize="18sp" />
-    </LinearLayout>
+            android:textSize="18sp"
+            android:textColor="#14142A"/>
+
+        <TextView
+            android:id="@+id/tvViewAll"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/view_all"
+            android:layout_alignParentEnd="true"
+            android:layout_centerVertical="true"
+            android:fontFamily="@font/dmsans_regular"
+            android:textSize="14sp"
+            android:textColor="#14142A"/>
+    </RelativeLayout>
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler_view_horizontal_list"
