--- a/app/src/main/res/layout/layout_facescan_challenge.xml
+++ b/app/src/main/res/layout/layout_facescan_challenge.xml
@@ -5,7 +5,7 @@
     android:layout_height="wrap_content"
     android:layout_marginTop="16dp"
     android:background="@drawable/rounded_corder_border_gray"
-    android:visibility="visible">
+    android:visibility="gone">
 
     <LinearLayout
         android:layout_width="match_parent"
