--- a/app/src/main/res/layout/bottomsheet_water_intake_selection.xml
+++ b/app/src/main/res/layout/bottomsheet_water_intake_selection.xml
@@ -168,34 +168,52 @@
                     />
             </LinearLayout>
 
-            <FrameLayout
-                android:id="@+id/progressBarContainer"
-                android:layout_width="100dp"
-                android:layout_height="320dp"
-                android:visibility="visible"
-                android:layout_marginStart="15dp"
-                android:background="@drawable/water_progress_background"
-                android:layout_gravity="center"
+            <RelativeLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:clipChildren="false"
                 android:clipToPadding="false">
 
-                <View
-                    android:id="@+id/progressFill"
-                    android:layout_width="match_parent"
-                    android:layout_height="0dp"
-                    android:layout_gravity="bottom"
-                    android:background="@drawable/progress_fill_water"
-                    />
+                <FrameLayout
+                    android:id="@+id/progressBarContainer"
+                    android:layout_width="100dp"
+                    android:layout_height="320dp"
+                    android:visibility="visible"
+                    android:layout_marginStart="15dp"
+                    android:background="@drawable/water_progress_background"
+                    android:layout_gravity="center"
+                    android:clipChildren="false"
+                    android:clipToPadding="false">
+
+                    <View
+                        android:id="@+id/progressFill"
+                        android:layout_width="match_parent"
+                        android:layout_height="0dp"
+                        android:layout_gravity="bottom"
+                        android:background="@drawable/progress_fill_water"
+                        />
+
+                    <ImageView
+                        android:id="@+id/ivCupIcon"
+                        android:layout_width="90dp"
+                        android:layout_height="30dp"
+                        android:layout_marginBottom="2dp"
+                        android:src="@drawable/ic_cup_line"
+                        android:layout_gravity="bottom|center" />
+
+                </FrameLayout>
 
                 <ImageView
-                    android:id="@+id/ivCupIcon"
-                    android:layout_width="90dp"
-                    android:layout_height="30dp"
-                    android:layout_marginBottom="2dp"
-                    android:src="@drawable/ic_cup_line"
-                    android:layout_gravity="bottom|center" />
+                    android:id="@+id/ivGoalIndicator"
+                    android:layout_width="115dp"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/goal_image_dotted"
+                    android:layout_alignTop="@id/progressBarContainer"
+                    android:layout_alignStart="@id/progressBarContainer"
+                    android:layout_marginTop="130dp"
+                    android:scaleType="fitXY" />
 
-            </FrameLayout>
+            </RelativeLayout>
 
             <androidx.appcompat.widget.LinearLayoutCompat
                 android:layout_width="wrap_content"
