--- a/app/src/main/res/layout/fragment_recipe_details.xml
+++ b/app/src/main/res/layout/fragment_recipe_details.xml
@@ -74,7 +74,7 @@
 
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:id="@+id/breakfast_layout"
-                    android:layout_width="match_parent"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="20dp"
                     android:layout_marginStart="15dp"
@@ -117,7 +117,7 @@
 
                     <TextView
                         android:id="@+id/vegTv"
-                        android:layout_width="0dp"
+                        android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="5dp"
                         android:layout_marginEnd="5dp"
