fixes jira bugs

--- a/app/src/main/res/layout/fragment_sleep_stages.xml
+++ b/app/src/main/res/layout/fragment_sleep_stages.xml
@@ -472,6 +472,7 @@
                         android:id="@+id/transparentOverlay"
                         android:layout_width="30dp"
                         android:layout_height="24dp"
+                        android:visibility="gone"
                         android:background="@drawable/border_black"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
@@ -553,6 +554,7 @@
                         android:id="@+id/transparentOverlayCardio"
                         android:layout_width="30dp"
                         android:layout_height="24dp"
+                        android:visibility="gone"
                         android:background="@drawable/border_black"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
@@ -634,6 +636,7 @@
                         android:id="@+id/transparentOverlayFatBurn"
                         android:layout_width="30dp"
                         android:layout_height="24dp"
+                        android:visibility="gone"
                         android:background="@drawable/border_black"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
@@ -715,6 +718,7 @@
                         android:id="@+id/transparentOverlayLight"
                         android:layout_width="30dp"
                         android:layout_height="24dp"
+                        android:visibility="gone"
                         android:background="@drawable/border_black"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
