--- a/app/src/main/res/layout/fragment_hydration_tracker.xml
+++ b/app/src/main/res/layout/fragment_hydration_tracker.xml
@@ -446,6 +446,7 @@
                 android:fontFamily="@font/dmsans_regular"
                 android:layout_marginTop="8dp"
                 android:text=""
+                android:layout_marginBottom="10dp"
                 app:layout_constraintTop_toBottomOf="@+id/hydration_description_heading"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent" />
@@ -455,7 +456,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:elevation="4dp"
-                android:visibility="visible"
+                android:visibility="gone"
                 android:background="@color/white"
                 app:cardCornerRadius="10dp"
                 android:paddingBottom="5dp"
