--- a/app/src/main/res/layout/fragment_sugar.xml
+++ b/app/src/main/res/layout/fragment_sugar.xml
@@ -230,6 +230,7 @@
                             app:layout_constraintTop_toBottomOf="@+id/total_text_heading" />
 
                         <TextView
+                            android:id="@+id/totalPercentageIc"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="g"
