fixes jira bugs

--- a/app/src/main/res/layout/fragment_sugar.xml
+++ b/app/src/main/res/layout/fragment_sugar.xml
@@ -166,7 +166,7 @@
                             android:id="@+id/percentageIc"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="g"
+                            android:text="mg"
                             android:textSize="12sp"
                             android:textColor="@color/black_no_meals"
                             android:fontFamily="@font/dmsans_regular"
@@ -186,7 +186,7 @@
                             android:id="@+id/percentage_text"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="50% past week"
+                            android:text="0% past week"
                             android:textSize="10sp"
                             android:visibility="visible"
                             android:layout_marginStart="4dp"
@@ -233,7 +233,7 @@
                             android:id="@+id/totalPercentageIc"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="g"
+                            android:text="mg"
                             android:textSize="12sp"
                             android:textColor="@color/black_no_meals"
                             android:fontFamily="@font/dmsans_regular"
@@ -253,7 +253,7 @@
                             android:id="@+id/totalPercentageTv"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="50% past week"
+                            android:text="0% past week"
                             android:textSize="10sp"
                             android:visibility="visible"
                             android:layout_marginStart="4dp"
