fixes jira bugs

--- a/app/src/main/res/layout/fragment_step.xml
+++ b/app/src/main/res/layout/fragment_step.xml
@@ -419,7 +419,7 @@
                             android:id="@+id/goalLayout"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:visibility="visible"
+                            android:visibility="gone"
                             android:layout_marginStart="15dp"
                             android:orientation="horizontal">
 
@@ -624,6 +624,8 @@
                 android:layout_height="20dp"
                 android:layout_marginStart="20dp"
                 android:layout_marginEnd="20dp"
+                android:layout_marginBottom="20dp"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/current_week_text"
@@ -633,6 +635,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textSize="20dp"
+                android:visibility="gone"
                 android:layout_marginStart="20dp"
                 android:textColor="@color/black"
                 android:fontFamily="@font/dmsans_bold"
@@ -644,6 +647,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="steps/day"
+                android:visibility="gone"
                 android:layout_marginStart="5dp"
                 app:layout_constraintStart_toEndOf="@+id/value_previous_week"
                 app:layout_constraintBottom_toBottomOf="@+id/value_previous_week"/>
@@ -654,6 +658,7 @@
                 android:layout_height="wrap_content"
                 android:textColor="@color/black"
                 android:textSize="12sp"
+                android:visibility="gone"
                 android:layout_marginTop="10dp"
                 android:text="Previous Week"
                 android:layout_marginEnd="20dp"
@@ -666,6 +671,7 @@
                 android:layout_height="20dp"
                 android:layout_marginStart="20dp"
                 android:layout_marginEnd="20dp"
+                android:visibility="gone"
                 android:layout_marginBottom="20dp"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
