--- a/app/src/main/res/layout/fragment_hydration_tracker.xml
+++ b/app/src/main/res/layout/fragment_hydration_tracker.xml
@@ -46,7 +46,7 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         app:layout_constraintTop_toBottomOf="@+id/layout_toolbar"
-        android:layout_marginTop="15dp"
+        android:layout_marginVertical="15dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toBottomOf="parent">
